syntax = "proto3";

package com.smartagri.irrigation;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "grpc.IrrigationService";
option java_outer_classname = "IrrigationProto";

service IrrigationService {
  rpc StartIrrigation(IrrigationRequest) returns (IrrigationResponse);
  rpc StopIrrigation(IrrigationRequest) returns (IrrigationResponse);
}

message IrrigationRequest {
  string farm_id = 1;
  string zone_id = 2;
  string duration = 3;
}

message IrrigationResponse {
  bool success = 1;
  string message = 2;
}
